Added profile page, changed structure

--- a/index.html
+++ b/index.html
@@ -165,11 +165,7 @@
             Create Auction
           </button>
           <button type="button" class="btn btn-primary">My Auctions</button>
-          <button
-            href="profile/index.html"
-            type="button"
-            class="btn btn-primary"
-          >
+          <button id="profile-btn" type="button" class="btn btn-primary">
             My Profile
           </button>
         </div>
