--- a/listing/index.html
+++ b/listing/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-dark bg-dark mb-3">
+      <nav class="navbar bg-secondary mb-3">
         <div class="container-fluid gap-5 justify-content-center">
           <a class="navbar-brand" href="/">Bidder.io</a>
           <ul class="navbar-nav d-flex flex-row gap-4">
@@ -36,8 +36,6 @@
             <li id="nav-logout" class="nav-item">
               <a class="nav-link" id="nav-logout-btn" href="#">Logout</a>
             </li>
-          </ul>
-          <ul>
             <li id="nav-credits" class="nav-item">
               <label id="nav-credits" class="rounded border-1">Credits</label>
             </li>
