--- a/profile/index.html
+++ b/profile/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-dark bg-dark mb-3">
+      <nav class="navbar bg-secondary mb-3">
         <div class="container-fluid gap-5 justify-content-center">
           <a class="navbar-brand" href="/">Bidder.io</a>
           <ul class="navbar-nav d-flex flex-row gap-4">
@@ -18,7 +18,7 @@
                 id="nav-auction-btn"
                 class="nav-link"
                 aria-current="page"
-                href="#"
+                href="/"
                 >Auctions</a
               >
             </li>
@@ -29,7 +29,7 @@
               <a class="nav-link" id="nav-logout-btn" href="#">Logout</a>
             </li>
             <li id="nav-credits" class="nav-item">
-              <a id="nav-credits" class="nav-item">Credits</a>
+              <label id="nav-credits" class="rounded border-1">Credits</label>
             </li>
           </ul>
         </div>
