--- a/profile/index.html
+++ b/profile/index.html
@@ -62,6 +62,9 @@
             </div>
         </div>
         <div id="alert-container"></div>
+        <div id="profile-listing" class="mt-4">
+
+        </div>
       </section>
     </main>
     <footer></footer>
