--- a/index.html
+++ b/index.html
@@ -230,6 +230,9 @@
     </main>
 
     <footer>
+      <div>
+        <label>&#169; Bidder.io 2022</label>
+      </div>
       <label class="form-switch">
         <input type="checkbox">
         <i></i>
