--- a/listing/index.html
+++ b/listing/index.html
@@ -91,8 +91,16 @@
           </div>
         </div>
       </section>
-    </main>
-    <footer></footer>
+    </main><footer>
+      <div>
+        <label>&#169; Bidder.io 2022</label>
+      </div>
+      <label class="form-switch">
+        <input type="checkbox">
+        <i></i>
+        Toggle Dark Mode
+      </label>
+    </footer>
     <script src="../src/javascript/main_listing.js" type="module"></script>
   </body>
 </html>
