--- a/profile/index.html
+++ b/profile/index.html
@@ -66,8 +66,16 @@
 
         </div>
       </section>
-    </main>
-    <footer></footer>
+    </main><footer>
+      <div>
+        <label>&#169; Bidder.io 2022</label>
+      </div>
+      <label class="form-switch">
+        <input type="checkbox">
+        <i></i>
+        Toggle Dark Mode
+      </label>
+    </footer>
     <script src="../src/javascript/main_profile.js" type="module"></script>
   </body>
 </html>
