--- a/profile/index.html
+++ b/profile/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Find and bid on unique items in online auctions at Bidder.io. Create your own auctions and sell your items on our platform. Happy bidding" />
+    <meta name="author" content="Bidder.io Team" />
     <link rel="stylesheet" href="../build/css/styles.css" />
     <title>Semester Project 2022</title>
   </head>
