--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="Find and bid on unique items in online auctions at Bidder.io. Create your own auctions and sell your items on our platform. Happy bidding" />
     <meta name="author" content="Bidder.io Team" />
     <link rel="stylesheet" href="build/css/styles.css" />
-    <title>Semester Project 2022</title>
+    <link rel="icon" type="image/png" href="src/assets/favicon.ico">
+    <title>Bidder.io</title>
   </head>
   <body>
     <header>
