--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <a class="nav-link" id="nav-logout-btn" >Logout</a>
             </li>
             <li id="nav-credits" class="nav-item">
-              <label id="nav-credits" class="rounded border-1">Credits</label>
+              <label id="nav-label-credits" class="rounded border-1">Credits</label>
             </li>
           </ul>
         </div>
